--- a/index.html
+++ b/index.html
@@ -1,16 +1,81 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html lang="en">
+<head>
+    <title>Fiat Masthead</title>
+    <meta data-template-name="Template_H5T_mhexpanding-970x250-image">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/external_hosted/polymer/custom.elements.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/ads/ci/ytclosebutton/1/ytclosebutton_min.js"></script>
+	<script src="https://s0.2mdn.net/ads/studio/cached_libs/timelinelite_1.19.0_13e3bd0e510d63fd5e5ef9bf9dac7017_min.js"></script>
+	<script src="https://s0.2mdn.net/ads/studio/cached_libs/cssplugin_1.19.0_cfbff7d208ccfdbe176b9855af1eb1fa_min.js"></script>
+	<script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenlite_1.19.0_422f021fad4c20f20cf3640a06ac39e9_min.js"></script>
+	<script src="js/vendor/zepto.min.js"></script>
+
+</head>
+<body>
+	<div id="main-panel">
+		<!-- LOCK-UPS -->
+		<img id="abarth-logo" src="images/abarth-logo.png" alt="Abarth"/>
+
+		<div id="collapsed-panel">
+			<img id="tag-line" class="" src="images/feel-the-thrill.png" alt="Feel The Thrill"/>
+			<img id="description" class="" src="images/description-text.png" alt="Use our body to experience"/>
+			<img id="ctaExpand_dc" class="" src="images/cta-expand.png" alt="Play the game"/>
+		</div>
+
+		<div id="expanded-panel">
+			<img class="top-gradient" src="images/top-gradient.png"/>
+
+
+			<div id="ctaClose_dc"><b>X</b> <span>Minimise Ad</span></div>
+
+
+			<div id='fps'></div>
+
+			<div id="racer">
+
+				<div id="game-hud">
+					<img id="hud-lap" class="hud-item" src="images/hud-lap.png" alt="Lap"/>
+					<img id="hud-restart" class="hud-item" src="images/hud-restart.png" alt="Restart"/>
+					<img id="hud-end-game" class="hud-item" src="images/hud-end-game.png" alt="End"/>
+					<img id="hud-help" class="hud-item" src="images/hud-help.png" alt="Help"/>
+					<img id="hud-sound" class="hud-item" src="images/hud-mute.png" alt="Help"/>
+					<span id="speed"            class="hud"><span id="speed_value" class="value">0</span> mph</span>
+					<span id="current_lap_time" class="hud">Time: <span id="current_lap_time_value" class="value">0.0</span></span>
+					<span id="last_lap_time"    class="hud">Last Lap: <span id="last_lap_time_value" class="value">0.0</span></span>
+					<span id="fast_lap_time"    class="hud">Fastest Lap: <span id="fast_lap_time_value" class="value">0.0</span></span>
+				</div>
+
+				<canvas id="canvas">
+				</canvas>
+
+			</div>
+
+			<div id="motion-control-helper">
+				<div id="left-motion-area" class="motion-area"></div>
+				<div id="center-motion-area" class="motion-area"></div>
+				<div id="right-motion-area" class="motion-area"></div>
+			</div>
+
+			<video id="inputVideo" width="150" height="100" autoplay loop>
+			</video>
+
+			<span id="mute"></span>
+
+		</div>
+
+
+		<ci-ytclosebutton lang="en" theme="gray" shadow="false" id="ytClose_dc">
+		</ci-ytclosebutton>
+	</div>
+
+
+
+	<script src="js/vendor/model_pca_20_svm.js"></script>
+	<script src="js/vendor/clmtrackr.min.js"></script>
+	<script src="js/siteCore.js"></script>
+
+</body>
 </html>
