--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<div id="main-panel">
 		<!-- LOCK-UPS -->
-		<img id="abarth-logo" src="images/abarth-logo.png" alt="Abarth"/>
+		<img id="abarth-logo" src="images/abarth-logo-large.png" alt="Abarth"/>
 
 		<div id="collapsed-panel">
 			<img id="tag-line" class="" src="images/feel-the-thrill.png" alt="Feel The Thrill"/>
@@ -28,20 +28,57 @@
 		<div id="expanded-panel">
 			<img class="top-gradient" src="images/top-gradient.png"/>
 
-
 			<div id="ctaClose_dc"><b>X</b> <span>Minimise Ad</span></div>
-
 
 			<div id='fps'></div>
 
-			<div id="racer">
+			<div id="view-instructions" class="view">
 
+				<img id="how-to-play" src="images/how-to-play.png" alt="How to play"/>
+				<img id="options-header" src="images/game-options-header.png" alt="Game Options"/>
+
+				<div id="allow-camera" class="instructions">
+					<img id="allow-camera-text" src="images/allow-camera.png" alt="Allow your camera"/>
+				</div>
+
+				<div id="move-right" class="instructions">
+					<img id="move-right-text" src="images/move-right.png" alt="Move Right"/>
+				</div>
+
+				<div id="move-left" class="instructions">
+					<img id="move-left-text" src="images/move-left.png" alt="Move Left"/>
+				</div>
+
+				<div id="how-to-play-keyboard" class="instructions">
+					<img id="keyboard-controls" src="images/how-to-play-keyboard.png" alt="Keyboard controls"/>
+				</div>
+
+				<div id="options-screen" class="instructions">
+					<img id="options-copy" src="images/game-options.png" alt="Game Options"/>
+					<img id="resume" class="options-cta" src="images/resume.png" alt="Resume"/>
+					<img id="restart" class="options-cta" src="images/restart.png" alt="Restart"/>
+					<img id="end-game" class="options-cta" src="images/end-game.png" alt="End Game"/>
+				</div>
+
+				<img id="car-right" class="car" src="images/car-right.png" alt="Car Right"/>
+				<img id="car-straight" class="car" src="images/car-straight.png" alt="Car Straight"/>
+				<img id="car-left" class="car" src="images/car-left.png" alt="Car Left"/>
+			</div>
+
+			<div id="view-game" class="view">
 				<div id="game-hud">
+					<img id="race-starter" class="race-starter" src="images/race-starter.jpg" alt="Ready"/>
+					<img id="ready" class="race-starter" src="images/ready.png" alt="Ready"/>
+					<img id="ready-1" class="race-starter" src="images/1.png" alt="1"/>
+					<img id="ready-2" class="race-starter" src="images/2.png" alt="2"/>
+					<img id="ready-3" class="race-starter" src="images/3.png" alt="3"/>
+					<img id="go" class="race-starter" src="images/go.png" alt="GO"/>
+
 					<img id="hud-lap" class="hud-item" src="images/hud-lap.png" alt="Lap"/>
-					<img id="hud-restart" class="hud-item" src="images/hud-restart.png" alt="Restart"/>
-					<img id="hud-end-game" class="hud-item" src="images/hud-end-game.png" alt="End"/>
-					<img id="hud-help" class="hud-item" src="images/hud-help.png" alt="Help"/>
+
+					<img id="hud-options" class="hud-item" src="images/hud-help.png" alt="Help"/>
 					<img id="hud-sound" class="hud-item" src="images/hud-mute.png" alt="Help"/>
+
 					<span id="speed"            class="hud"><span id="speed_value" class="value">0</span> mph</span>
 					<span id="current_lap_time" class="hud">Time: <span id="current_lap_time_value" class="value">0.0</span></span>
 					<span id="last_lap_time"    class="hud">Last Lap: <span id="last_lap_time_value" class="value">0.0</span></span>
@@ -64,7 +101,16 @@
 
 			<span id="mute"></span>
 
+			<div id="view-end-game" class="view">
+				<img id="end-game-bg" class="end-game-asset" src="images/end-game-bg.jpg" alt="End Game"/>
+				<img id="end-game-header" class="end-game-asset" src="images/the-thrilling-new-abarth.png" alt="The Thrilling New Abarth 124 Spider"/>
+				<img id="end-game-cta" class="end-game-asset" src="images/book-a-test-drive.png" alt="Book A Test Drive"/>
+				<img id="end-game-restart" class="end-game-asset" src="images/restart-end-game.png" alt="Restart Game"/>
+			</div>
+
 		</div>
+
+
 
 
 		<ci-ytclosebutton lang="en" theme="gray" shadow="false" id="ytClose_dc">
