--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 			</div>
 
 			<div id="motion-control-helper">
+				<div id="motion-line"></div>
 				<div id="left-motion-area" class="motion-area"></div>
 				<div id="center-motion-area" class="motion-area"></div>
 				<div id="right-motion-area" class="motion-area"></div>
