Tasks:  - Updated all UI  - Count Down Starter Fixed  - Lap Counter Added  - 3 laps finish race and "nice driving" comes up > end screen

--- a/index.html
+++ b/index.html
@@ -67,14 +67,17 @@
 
 			<div id="view-game" class="view">
 				<div id="game-hud">
-					<img id="race-starter" class="race-starter" src="images/race-starter.jpg" alt="Ready"/>
-					<img id="ready" class="race-starter" src="images/ready.png" alt="Ready"/>
+					<img id="race-starter-bg" src="images/race-starter-bg.png" alt="Ready"/>
 					<img id="ready-1" class="race-starter" src="images/1.png" alt="1"/>
 					<img id="ready-2" class="race-starter" src="images/2.png" alt="2"/>
 					<img id="ready-3" class="race-starter" src="images/3.png" alt="3"/>
 					<img id="go" class="race-starter" src="images/go.png" alt="GO"/>
 
-					<img id="hud-lap" class="hud-item" src="images/hud-lap.png" alt="Lap"/>
+					<img id="hud-lap-1" class="hud-lap" src="images/hud-lap-1.png" alt="Lap 1"/>
+					<img id="hud-lap-2" class="hud-lap" src="images/hud-lap-2.png" alt="Lap 2"/>
+					<img id="hud-lap-3" class="hud-lap" src="images/hud-lap-3.png" alt="Lap 3"/>
+
+					<img id="nice-driving" src="images/nice-driving.png" alt="Nice Driving!!"/>
 
 					<img id="hud-options" class="hud-item" src="images/hud-help.png" alt="Help"/>
 					<img id="hud-sound" class="hud-item" src="images/hud-mute.png" alt="Help"/>
