--- a/index.html
+++ b/index.html
@@ -82,10 +82,6 @@
 					<img id="hud-options" class="hud-item" src="images/hud-help.png" alt="Help"/>
 					<img id="hud-sound" class="hud-item" src="images/hud-mute.png" alt="Help"/>
 
-					<span id="speed"            class="hud"><span id="speed_value" class="value">0</span> mph</span>
-					<span id="current_lap_time" class="hud">Time: <span id="current_lap_time_value" class="value">0.0</span></span>
-					<span id="last_lap_time"    class="hud">Last Lap: <span id="last_lap_time_value" class="value">0.0</span></span>
-					<span id="fast_lap_time"    class="hud">Fastest Lap: <span id="fast_lap_time_value" class="value">0.0</span></span>
 				</div>
 
 				<canvas id="canvas">
@@ -119,16 +115,10 @@
 
 	</div>
 
-
-
-
 	<ci-ytclosebutton lang="en" theme="gray" shadow="false" id="ytClose_dc">
 	</ci-ytclosebutton>
 
-
-
-
-	<script src="js/vendor/headtrackr.min.js"></script>
+	<script src="js/vendor/SeamlessLoop.js"></script>
 
 	<script src="js/siteCore.js"></script>
 
