Added ticks for success of instructions

--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
 				</div>
 
 				<div id="move-right" class="instructions">
+					<img class="tick-tick" src="images/tick-tick.png" alt="Tick Tick"/>
+					<img class="tick-circle" src="images/tick-circle.png" alt="Tick Circle"/>
 					<img id="move-right-text" src="images/move-right.png" alt="Move Right"/>
+					<img class="move-body" src="images/move-body.png" alt="Move Body"/>
 				</div>
 
 				<div id="move-left" class="instructions">
+					<img class="tick-tick" src="images/tick-tick.png" alt="Tick Tick"/>
+					<img class="tick-circle" src="images/tick-circle.png" alt="Tick Circle"/>
 					<img id="move-left-text" src="images/move-left.png" alt="Move Left"/>
+					<img class="move-body" src="images/move-body.png" alt="Move Body"/>
 				</div>
 
 				<div id="how-to-play-keyboard" class="instructions">
@@ -117,8 +123,6 @@
 
 	<ci-ytclosebutton lang="en" theme="gray" shadow="false" id="ytClose_dc">
 	</ci-ytclosebutton>
-
-	<script src="js/vendor/SeamlessLoop.js"></script>
 
 	<script src="js/siteCore.js"></script>
 
