--- a/index.html
+++ b/index.html
@@ -44,19 +44,29 @@
 				<div id="move-right" class="instructions">
 					<img class="tick-tick" src="images/tick-tick.png" alt="Tick Tick"/>
 					<img class="tick-circle" src="images/tick-circle.png" alt="Tick Circle"/>
-					<img id="move-right-text" src="images/move-right.png" alt="Move Right"/>
+					<img id="move-right-text" src="images/move-right-text.png" alt="Move Right"/>
+					<img id="move-right-head" src="images/move-right.png" alt="Move Right"/>
 					<img class="move-body" src="images/move-body.png" alt="Move Body"/>
+					<img class="cta-skip-tutorial" src="images/cta-skip-tutorial.png" alt="Skip Tutorial"/>
 				</div>
 
 				<div id="move-left" class="instructions">
 					<img class="tick-tick" src="images/tick-tick.png" alt="Tick Tick"/>
 					<img class="tick-circle" src="images/tick-circle.png" alt="Tick Circle"/>
-					<img id="move-left-text" src="images/move-left.png" alt="Move Left"/>
+					<img id="move-left-text" src="images/move-left-text.png" alt="Move Left"/>
+					<img id="move-left-head" src="images/move-left.png" alt="Move Left"/>
 					<img class="move-body" src="images/move-body.png" alt="Move Body"/>
+					<img class="cta-skip-tutorial" src="images/cta-skip-tutorial.png" alt="Skip Tutorial"/>
+				</div>
+
+				<div id="also-use-keyboard" class="instructions">
+					<img id="also-keyboard-controls" src="images/also-use-arrow-keys.png" alt="Keyboard controls"/>
+					<img id="cta-ready-camera" src="images/cta-ready.png" alt="I'm Ready"/>
 				</div>
 
 				<div id="how-to-play-keyboard" class="instructions">
 					<img id="keyboard-controls" src="images/how-to-play-keyboard.png" alt="Keyboard controls"/>
+					<img id="cta-ready-keyboard" src="images/cta-ready.png" alt="I'm Ready"/>
 				</div>
 
 				<div id="options-screen" class="instructions">
