Medals added Sounds added

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 					<img id="hud-lap-2" class="hud-lap" src="images/hud-lap-2.png" alt="Lap 2"/>
 					<img id="hud-lap-3" class="hud-lap" src="images/hud-lap-3.png" alt="Lap 3"/>
 
+					<img id="gold" src="images/gold.png" alt="gold">
+					<img id="silver" src="images/silver.png" alt="silver">
+					<img id="bronze" src="images/bronze.png" alt="bronze">
+
 					<img id="nice-driving" src="images/nice-driving.png" alt="Nice Driving!!"/>
 
 					<img id="hud-options" class="hud-item" src="images/hud-help.png" alt="Help"/>
