Added ie11 support

--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
 
 			<div id="ctaClose_dc"><b>X</b> <span>Close Expanded</span></div>
 
+
+			<audio id="car-run-audio">
+				<source src='car-run.mp3' type="audio/mpeg">
+			</audio>
+
+			<audio id="beep-audio">
+				<source src='beep.mp3' type="audio/mpeg">
+			</audio>
+
+			<audio id="go-audio">
+				<source src='go.mp3' type="audio/mpeg">
+			</audio>
+
+			<audio id="success-audio">
+				<source src='success.mp3' type="audio/mpeg">
+			</audio>
+
+			<audio id="car-impact-audio">
+				<source src='car-impact.mp3' type="audio/mpeg">
+			</audio>
+
+
+
 			<div id='fps'></div>
 
 			<div id="view-instructions" class="view">
