Updated copy Added IE11 and safari car sounds

--- a/index.html
+++ b/index.html
@@ -30,9 +30,24 @@
 
 			<div id="ctaClose_dc"><b>X</b> <span>Close Expanded</span></div>
 
+			<audio id="car-run-audio-low">
+				<source src='car-run-low.mp3' type="audio/mpeg">
+			</audio>
 
 			<audio id="car-run-audio">
 				<source src='car-run.mp3' type="audio/mpeg">
+			</audio>
+
+			<audio id="car-run-audio-medium">
+				<source src='car-run-medium.mp3' type="audio/mpeg">
+			</audio>
+
+			<audio id="car-run-audio-medium-high">
+				<source src='car-run-medium-high.mp3' type="audio/mpeg">
+			</audio>
+
+			<audio id="car-run-audio-high">
+				<source src='car-run-high.mp3' type="audio/mpeg">
 			</audio>
 
 			<audio id="beep-audio">
