--- a/audio.html
+++ b/audio.html
@@ -1,135 +1,72 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width">
+    <title>Audio playbackRate Example</title>  
+</head>
+<body>
+<div>
+  <audio id="audio1" style="width:25%" controls>Canvas not supported</audio>
+</div>
+<div>
+<input type="text" id="audioFile" value="car-run.mp3" size="60" />
 
-    <title>decodeAudioData example</title>
+</div>
+  <button id="playbutton" onclick="togglePlay();">Play</button>  
+  <button onclick="increaseSpeed();">Increase speed</button>
+  <button onclick="decreaseSpeed();">Decrease speed</button><br />
+  <div id="rate"></div>
 
-    <link rel="stylesheet" href="">
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
+     <script type="text/javascript">
+       // Create a couple of global variables to use. 
+       var audioElm = document.getElementById("audio1"); // Audio element
+       var ratedisplay = document.getElementById("rate"); // Rate display area
 
-  <body>
-    <h1>decodeAudioData example</h1>
+       // Hook the ratechange event and display the current playbackRate after each change
+       audioElm.addEventListener("ratechange", function () {
+         ratedisplay.innerHTML = "Rate: " + audioElm.playbackRate;
+       }, false);
 
-    <button class="play">Play</button>
-    <button class="stop">Stop</button>
+       //  Alternates between play and pause based on the value of the paused property
+       function togglePlay() {
+         if (document.getElementById("audio1")) {
 
-    <h2>Set playback rate</h2>
-    <input class="playback-rate-control" type="range" min="0.25" max="3" step="0.05" value="1">
-    <span class="playback-rate-value">1.0</span>
+           if (audioElm.paused == true) {
+             playAudio(audioElm);    //  if player is paused, then play the file
+           } else {
+             pauseAudio(audioElm);   //  if player is playing, then pause
+           }
+         }
+       }
 
-    <h2>Set loop start and loop end</h2>
-    <input class="loopstart-control" type="range" min="0" max="20" step="1" value="0">
-    <span class="loopstart-value">0</span>
+       function playAudio(audioElm) {
+         document.getElementById("playbutton").innerHTML = "Pause"; // Set button text == Pause
+         // Get file from text box and assign it to the source of the audio element 
+         audioElm.src = document.getElementById('audioFile').value;
+         audioElm.play();
+       }
 
-    <input class="loopend-control" type="range" min="0" max="20" step="1" value="0">
-    <span class="loopend-value">0</span>
-   
-    <pre></pre>
-  </body>
-<script>
+       function pauseAudio(audioElm) {
+         document.getElementById("playbutton").innerHTML = "play"; // Set button text == Play
+         audioElm.pause();
+       }
 
+       // Increment playbackRate by 1 
+       function increaseSpeed() {
+         audioElm.playbackRate += 1;
+       }
 
-// define variables
+       // Cut playback rate in half
+       function decreaseSpeed() {
+         if (audioElm.playbackRate <= 1) {
+           var temp = audioElm.playbackRate;
+           audioElm.playbackRate = (temp / 2); 
+         } else {
+           audioElm.playbackRate -= 1;
+         }
+       }
 
-var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-var source;
-var songLength;
-
-var pre = document.querySelector('pre');
-var myScript = document.querySelector('script');
-var play = document.querySelector('.play');
-var stop = document.querySelector('.stop');
-
-var playbackControl = document.querySelector('.playback-rate-control');
-var playbackValue = document.querySelector('.playback-rate-value');
-playbackControl.setAttribute('disabled', 'disabled');
-
-var loopstartControl = document.querySelector('.loopstart-control');
-var loopstartValue = document.querySelector('.loopstart-value');
-loopstartControl.setAttribute('disabled', 'disabled');
-
-var loopendControl = document.querySelector('.loopend-control');
-var loopendValue = document.querySelector('.loopend-value');
-loopendControl.setAttribute('disabled', 'disabled');
-
-// use XHR to load an audio track, and
-// decodeAudioData to decode it and stick it in a buffer.
-// Then we put the buffer into the source
-
-function getData() {
-  source = audioCtx.createBufferSource();
-  request = new XMLHttpRequest();
-
-  request.open('GET', 'audio/car-run.mp3', true);
-
-  request.responseType = 'arraybuffer';
+     </script>
 
 
-  request.onload = function() {
-    var audioData = request.response;
-
-    audioCtx.decodeAudioData(audioData, function(buffer) {
-        myBuffer = buffer;
-        songLength = buffer.duration;
-        source.buffer = myBuffer;
-        source.playbackRate.value = playbackControl.value;
-        source.connect(audioCtx.destination);
-        //source.loop = true;
-
-        loopstartControl.setAttribute('max', Math.floor(songLength));
-        loopendControl.setAttribute('max', Math.floor(songLength));
-      },
-
-      function(e){"Error with decoding audio data" + e.err});
-
-  }
-
-  request.send();
-}
-
-// wire up buttons to stop and play audio, and range slider control
-
-play.onclick = function() {
-  getData();
-  source.start(0);
-  play.setAttribute('disabled', 'disabled');
-  playbackControl.removeAttribute('disabled');
-  loopstartControl.removeAttribute('disabled');
-  loopendControl.removeAttribute('disabled');
-}
-
-stop.onclick = function() {
-  source.stop(0);
-  play.removeAttribute('disabled');
-  playbackControl.setAttribute('disabled', 'disabled');
-  loopstartControl.setAttribute('disabled', 'disabled');
-  loopendControl.setAttribute('disabled', 'disabled');
-}
-
-playbackControl.oninput = function() {
-  source.playbackRate.value = playbackControl.value;
-  playbackValue.innerHTML = playbackControl.value;
-}
-
-loopstartControl.oninput = function() {
-  source.loopStart = loopstartControl.value;
-  loopstartValue.innerHTML = loopstartControl.value;
-}
-
-loopendControl.oninput = function() {
-  source.loopEnd = loopendControl.value;
-  loopendValue.innerHTML = loopendControl.value;
-}
-
-
-// dump script to pre element
-
-pre.innerHTML = myScript.innerHTML;
-  </script>
+</body>
 </html>
