--- a/final/index.html
+++ b/final/index.html
@@ -121,8 +121,8 @@
 					<img id="nice-driving" src="images/nice-driving.png" alt="Nice Driving!!"/>
 
 					<img id="hud-options" class="hud-item" src="images/hud-help.png" alt="Help"/>
-					<img id="hud-sound" class="hud-item" src="images/hud-mute.png" alt="Help"/>
-
+					<img class="hud-sound hud-sound-unmuted hud-item" src="images/hud-mute.png" alt="Help"/>
+					<img class="hud-sound hud-sound-muted hud-item" src="images/hud-mute-active.png" alt="Help"/>
 				</div>
 
 				<canvas id="canvas">
