Updated demo with new background image

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,6 @@ and open the template in the editor.
     background-repeat:   no-repeat; margin: 0; padding: 0;
     background-position: top left; ">
         <div id="bdy" style="position: fixed; width: 2000px; height: 1000px; background: #000000; opacity: 0; z-index: -500" onClick="document.getElementById('bdy').style.opacity=0.7"></div>
-        <div style="z-index: -1; position: absolute; top: 100px; left: 127px"><iframe width="975" height="550" border="0" style="border: 0; padding: 0; margin: 0" src='https://cumminsandpartners.github.io/'></iframe></div>
+        <div style="z-index: -1; position: absolute; top: 100px; left: 127px"><iframe width="975" height="550" border="0" style="border: 0; padding: 0; margin: 0" src='https://cumminsandpartners.github.io/TimeoutFix/'></iframe></div>
     </body>
 </html>
