--- a/game-only/index.html
+++ b/game-only/index.html
@@ -5,13 +5,16 @@
     <meta data-template-name="Template_H5T_mhexpanding-970x250-image">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/external_hosted/polymer/custom.elements.min.js"></script>
+<!--	<script src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
+     <script type="text/javascript" src="https://www.gstatic.com/external_hosted/polymer/custom.elements.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/ads/ci/ytclosebutton/1/ytclosebutton_min.js"></script>
 	<script src="https://s0.2mdn.net/ads/studio/cached_libs/timelinelite_1.19.0_13e3bd0e510d63fd5e5ef9bf9dac7017_min.js"></script>
 	<script src="https://s0.2mdn.net/ads/studio/cached_libs/cssplugin_1.19.0_cfbff7d208ccfdbe176b9855af1eb1fa_min.js"></script>
 	<script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenlite_1.19.0_422f021fad4c20f20cf3640a06ac39e9_min.js"></script>
-	<script src="js/vendor/zepto.min.js"></script>
+	<script src="js/vendor/zepto.min.js"></script> -->
+	<script type="text/javascript" src="js/vendor/jquery-3.1.1.min.js"></script>
+	<script type="text/javascript" src="js/vendor/TweenMax.min.js"></script>
+
 
 </head>
 <body>
@@ -19,17 +22,9 @@
 		<!-- LOCK-UPS -->
 		<img id="abarth-logo" src="images/abarth-logo-large.png" alt="Abarth"/>
 
-		<div id="collapsed-panel">
-			<img id="tag-line" class="" src="images/feel-the-thrill.png" alt="Feel The Thrill"/>
-			<img id="description" class="" src="images/description-text.png" alt="Use our body to experience"/>
-			<img id="ctaExpand_dc" class="" src="images/cta-expand.png" alt="Play the game"/>
-		</div>
 
 		<div id="expanded-panel">
 			<img class="top-gradient" src="images/top-gradient.png" alt="gradient"/>
-
-			<div id="ctaClose_dc"><b>X</b> <span>Close Expanded</span></div>
-
 
 			<audio id="car-run-audio">
 				<source src='car-run.mp3' type="audio/mpeg">
@@ -134,7 +129,9 @@
 			<div id="view-end-game" class="view">
 				<img id="end-game-bg" class="end-game-asset" src="images/end-game-bg.jpg" alt="End Game"/>
 				<img id="end-game-header" class="end-game-asset" src="images/the-thrilling-new-abarth.png" alt="The Thrilling New Abarth 124 Spider"/>
-				<img id="end-game-cta" class="end-game-asset" src="images/book-a-test-drive.png" alt="Book A Test Drive"/>
+				<a target="_blank" href="http://www.fiat.com.au/request-a-test-drive-124">
+					<img id="end-game-cta" class="end-game-asset" src="images/book-a-test-drive.png" alt="Book A Test Drive"/>
+				</a>
 				<img id="end-game-restart" class="end-game-asset" src="images/restart-end-game.png" alt="Restart Game"/>
 			</div>
 
@@ -152,9 +149,6 @@
 		<video id="outputVideo" autoplay="" loop="" width="160" height="120" src=""></video>
 		<canvas id="motion-track-overlay" width="160" height="120"></canvas>
 
-
-		<ci-ytclosebutton lang="en" theme="gray" shadow="false" id="ytClose_dc">
-		</ci-ytclosebutton>
 
 	</div>
 
